# azure_ml

./: .gitignore  Makefile  README.md  pyproject.toml  run.py
data/raw/: test.csv
docs/: REPRODUCIBILIDAD.md
models/: best_lgbm_params.json  fe_pipe.joblib  final_features.json
notebooks/: 1-EDA.ipynb  1.0-eda.ipynb  2-feature-engineering.ipynb  3-inicial-models.ipynb  4-model-optimization.ipynb  5-final-model.ipynb
package_ml/: __init__.py  dataset.py  features.py  plots.py
package_ml/modeling/: baseline.py  predict.py  selection.py  train.py
reports/: baseline_metrics.csv
