[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "package_ml"
version = "0.0.1"
description = "Proyecto para predecir calorias quemadas"
authors = [
  { name = "fertueros" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "fastparquet>=2024.11.0",
    "jupyterlab>=4.4.3",
    "lightgbm>=4.6.0",
    "loguru",
    "matplotlib>=3.10.3",
    "mlflow>=3.1.0",
    "numpy>=2.3.0",
    "optuna>=4.4.0",
    "pandas>=2.3.0",
    "pip",
    "pyarrow>=20.0.0",
    "python-dotenv",
    "ruff",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "tqdm",
    "typer",
    "xgboost>=3.0.2",
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["package_ml"]
include = ["pyproject.toml", "package_ml/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["package_ml"]
force-sort-within-sections = true

